chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Spectral&display=swap');

:root {
--heading-font: 'Montserrat', sans-serif;
--paragraph-font: 'Spectral', serif;
--primary-color: #9B0405;
--secondary-color: #000000;
}

body {
    font-family: var(--paragraph-font);
    margin: 0;
    padding: 0;
    color: #333;
}

header {
    max-width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem;
    background-color: var(--primary-color);
    color: #ffffff;
    font-size: 1.50em;
}

#logo {
    margin-right: 20px;
}

.logo {
    max-height: 100%;
    width: auto;
}

.navigation {
    background-color: var(--secondary-color);
}

.nav-links {
    display: none;
    list-style-type: none;
    padding: .5rem;
    margin: 0;
    display: flex;
    justify-content: center;
}

.nav-links li {
    margin: 0 30px;
}

.nav-links a {
    color: #ffffff;
    padding: 10px 15px;
    text-decoration: none;
    font-size: 1.75em;
}

.nav-links a:hover {
    color: var(--primary-color);
    background-color: #ffffff;
}

#menu {
    display: none;
    font-size: 1.5rem;
    border: 0;
    background: none;
    color: #ffffff;
    position: absolute;
    top: 1rem;
    right: 1rem;
}

#menu::before {
    content: "☰";
}

#menu.open::before {
    content: "❌";
}

.hero {
    position: relative;
    width: 100%;
    height: 400px;
    overflow: hidden;
}

.hero img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.hero-overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    color: #ffffff;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
    font-size: 2.75em;
    padding: 10%;
    box-sizing: border-box;
}

.cta-button {
    padding: 10px 20px;
    background-color: var(--secondary-color);
    color: #ffffff;
    text-decoration: none;
    border-radius: 5px;
    font-family: var(--heading-font);
    display: inline-block;
    text-align: center;
}

.cta-button:focus, .nav-links a:focus {
    outline: 3px solid var(--primary-color);
}

.cta-button:hover {
    background-color: #ffffff;
    color: var(--primary-color);
}

.current-events, .weather {
    padding: 20px;
    border: 2px solid var(--primary-color);
    border-radius: 5px;
    background-color: #ffffff;
}

.main-content {
    display: grid;
    grid-template-columns: 2fr 1fr;
    gap: 20px;
    padding: 20px;
}

.grid-layout {
    display: grid;
    grid-template-columns: 1fr 2fr;
    gap: 20px;
    padding: 20px;
}

.sidebar section {
    padding: 20px;
    border: 2px solid var(--primary-color);
    border-radius: 5px;
    background-color: #ffffff;
    margin-bottom: 20px;
    margin-top: 20px;
    margin-left: 15px;
}

.main-images {
    display: flex;
    flex-direction: column;
    gap: 15px;
}


.main-images img {
    width: 100%;
    height: auto;
    border-radius: 5px;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.visit-message {
    padding: 10px;
    border: 2px solid var(--primary-color);
    border-radius: 5px;
    background-color: #ffffff;
    margin-top: 20px;
    text-align: center;
}

.business-spotlights {
    grid-column: 1 / -1;
    padding: 20px;
    text-align: center;
    background-color: var(--primary-color);
    color: #ffffff;
}

.spotlights-container {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    justify-content: space-around;
    gap: 15px;
}

.spotlight {
    border: 2px solid var(--secondary-color);
    border-radius: 5px;
    background-color: #ffffff;
    color: #000000;
}

#social {
    display: flex;
    align-items: center;
}

.social-link {
    margin: 0 10px;
    text-decoration: none;
    font-size: xx-large;
}

.social-link:hover {
    transform: scale(1.2);
}

.social-icon {
    width: 30px;
    height: auto;
    filter: invert(1);
}

#dark-mode {
    display: flex;
    align-items: center;
    margin-left: 20px;
}

.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
}
.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    transition: .4s;
    transition: .4s;
}

.slider::before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: #ffffff;
    transition: .4s;
    transition: .4s;
}

input:checked + .slider {
    background-color: #000000;
}

input:focus + .slider {
    box-shadow: 0 0 1px #000000;
}

input:checked + .slider:before {
    transform: translateX(26px);
    transform: translateX(26px);
    transform: translateX(26px);
}

.slider.round {
    border-radius: 34px;
}

.slider.round:before {
    border-radius: 50%;
}

.dark-mode-label {
    margin-right: 10px;
    color: #ffffff;
    font-size: 1em;
}

body.dark-mode {
    background-color: #333;
    color: #fff;
}

body.dark-mode header, body.dark-mode footer, body.dark-mode .current-events, body.dark-mode .weather, body.dark-mode .business-spotlights, body.dark-mode .spotlight {
    background-color: #000;
    color: #fff;
}

body.dark-mode .current-events, body.dark-mode .weather, body.dark-mode .business-spotlights, body.dark-mode .spotlight {
    border: 2px solid #fff
}

footer {
    background-color: var(--secondary-color);
    color: #ffffff;
    justify-content: center;
    text-align: center;
    padding: 5px;
}

h1 {
    text-align: center;
}

.form-container legend {
    padding: 0 .5rem;
}

.form-container form {
    display: grid;
    grid-template-columns: 1fr;
    gap: 20px;
}

.form-container label {
    font-family: var(--heading-font);
    font-size: 1.2em;
    display: block;
    margin-bottom: 10px;
    color: var(--primary-color);
}

.form-container input:required {
    border-right: solid 8px var(--primary-color);
}

.form-container input, .form-container select, .form-container textarea {
    width: 100%;
    padding: 10px;
    font-size: 1em;
    border: 2px solid var(--primary-color);
    border-radius: 5px;
    background-color: #f8f8f8;
    color: #333;
    box-sizing: border-box;
    margin-bottom: 15px;
}

.form-container input:focus, .form-container select:focus {
    outline: none;
    border-color: var(--secondary-color);
    background-color: #e9e9e9;
}

.form-container input:focus, .form-container select:focus, .form-container textarea:focus {
    outline: none;
    border-color: var(--secondary-color);
    background-color: #ffffff;
}

.form-button {
    padding: 10px 20px;
    background-color: var(--primary-color);
    color: #ffffff;
    text-decoration: none;
    border-radius: 5px;
    font-family: var(--heading-font);
    display: inline-block;
    text-align: center;
    max-width: 200px;
    box-shadow: 1px 1px 4px black;
    cursor: pointer;
    display: block;
    margin: 10px auto;
}

.form-button:focus, .nav-links a:focus {
    outline: 3px solid var(--primary-color);
}

.form-button:hover {
    background-color: #ffffff;
    color: var(--primary-color);
}

.member-benefits {
    padding: 20px;
    background-color: #f8f8f8;
    border: 2px solid var(--primary-color);
    border-radius: 5px;
}

.member-benefits h2 {
    padding-bottom: 30px;
}

.member-benefits h3 {
    color: var(--primary-color);
}

.benefit-level {
    margin-bottom: 50px;
}

@media (max-width: 480px) {
    .small-overlay {
        display: flex;
    }

    #menu {
        display: block;
        font-size: 1.5rem;
        border: 0;
        background: none;
        color: #ffffff;
        position: absolute;
        top: 1rem;
        right: 1rem;
    }
    
    #menu::before {
        content: "☰";
    }
    
    #menu.open::before {
        content: "❌";
    }

    .nav-links {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 50px;
        left: 0;
        width: 100%;
        background-color: var(--secondary-color);
    }

    .nav-links.open {
        display: flex;
    }

    .nav-links a:hover {
        background-color: transparent;
    }

}

@media (min-width: 481px) and (max-width: 768px) {
    header {
        flex-direction: column;
        align-items: flex-start;
    }

    #member-login {
        margin-bottom: 10px;
    }

    #dark-mode {
        margin-bottom: 10px;
    }

    .nav-links {
        display: none;
        flex-direction: column;
        position: absolute;
        top: 50px;
        left: 0;
        width: 100%;
        background-color: var(--secondary-color);
    }

    .nav-links.open {
        display: flex;
    }

    .nav-links a:hover {
        background-color: transparent;
    }

    #menu {
        display: block;
        padding: 10px;
    }

    .medium-overlay {
        display: flex;
    }

    .hero-overlay h2 {
        font-size: 1.5em;
        padding: 0 10px;
    }

    .hero-overlay .cta-button {
        padding: 10px 15px;
        font-size: 1em;
    }
}

@media (min-width: 769px) {
    .large-overlay {
        display: flex;
    }

    .main-content {
        display: grid;
        grid-template-columns: 2fr 1fr;
        gap: 20px;
    }

    .form-container {
        display: grid;
        grid-template-columns: 1fr 1fr;
        gap: 20px;
        padding: 20px;
        margin: 0 auto;
    }

    .main-images img:hover {
        transform: scale(1.05);
        box-shadow: 0 4px 15px rgba(0,0,0,0.3);
    }
}

